--- a/index.html
+++ b/index.html
@@ -1,176 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confession Log XVII</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
     body {
-      margin: 0;
-      background: black;
-      color: #00ffcc;
-      font-family: 'VT323', monospace;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
+      margin:0; background:#000; color:#00ffcc;
+      font-family:'VT323',monospace; display:flex;
+      align-items:center; justify-content:center;
+      height:100vh; overflow:hidden;
     }
-    #container {
-      max-width: 80ch;
-      background: rgba(0,0,0,0.7);
-      border: 2px solid #00ffcc;
-      padding: 2em;
-      position: relative;
-      text-align: left;
+    #container {max-width:80ch; padding:2em;
+      border:2px solid #00ffcc;
+      background:rgba(0,0,0,0.7);
+      text-align:left; position:relative;
     }
-    #text, #second-text {
-      white-space: pre-wrap;
-      font-size: 1.4em;
-      min-height: 6em;
+    #text,#second-text{white-space:pre-wrap; font-size:1.4em; min-height:6em;}
+    .screamer{font-size:4em; color:red;
+      text-shadow:0 0 10px red;
+      animation:glitchFlicker .15s infinite alternate;
+      display:none; text-align:center;}
+    @keyframes glitchFlicker{0%{transform:translate(0)}50%{transform:translate(-2px,2px)}100%{transform:translate(2px,-2px)}}
+    .gif-container{display:none; text-align:center; margin:1em 0;}
+    img{width:320px; image-rendering:pixelated;}
+    .overlay{position:absolute; top:0;left:0; width:100%;height:100%;
+      background:rgba(255,0,0,0.02); mix-blend-mode:overlay;
+      animation:overlayFlicker .2s infinite; pointer-events:none;
     }
-    .quote {
-      color: fuchsia;
-    }
-    .screamer {
-      font-size: 3em;
-      color: red;
-      text-shadow: 0 0 10px red;
-      animation: glitchFlicker 0.15s infinite alternate;
-      display: none;
-      text-align: center;
-    }
-    @keyframes glitchFlicker {
-      0% { transform: translate(0); }
-      50% { transform: translate(-2px,2px); }
-      100% { transform: translate(2px,-2px); }
-    }
-    .gif-container {
-      text-align: center;
-      margin: 1em 0;
-      display: none;
-    }
-    img { width: 320px; image-rendering: pixelated; }
-    /* Random glitch overlay */
-    .overlay {
-      position: absolute; top:0; left:0;
-      width:100%; height:100%; pointer-events:none;
-      background: rgba(255,0,0,0.02);
-      mix-blend-mode: overlay;
-      animation: overlayFlicker 0.2s infinite;
-    }
-    @keyframes overlayFlicker {
-      0%,100%{opacity:0;} 50%{opacity:0.1;}
-    }
-    #console-errors { display:none; }
+    @keyframes overlayFlicker{0%,100%{opacity:0}50%{opacity:.1}}
+    #console-errors{display:none;}
+    button#start-btn{font-family:'VT323',monospace;
+      background:#000;border:2px solid #00ffcc;color:#00ffcc;
+      padding:.5em 1em;margin-top:1em;cursor:pointer;}
   </style>
 </head>
 <body>
   <div id="container">
     <div id="text"></div>
-    <div class="gif-container"><img id="gif" src="creepy.gif" alt="Creepy Gif"></div>
+    <div class="gif-container"><img id="gif" src="giphy.gif"></div>
     <div id="second-text"></div>
-    <div id="screamer" class="screamer">░░░ WE SEE YOU ░░░</div>
+    <div id="screamer">░░░ WE SEE YOU ░░░</div>
     <div class="overlay"></div>
+    <button id="start-btn">Click to start</button>
   </div>
-
   <audio id="typeSound" src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Typewriter_key.ogg" preload="auto"></audio>
   <audio id="ambience" src="https://cdn.pixabay.com/download/audio/2023/03/13/audio_78016e640e.mp3?filename=data-murmur-140612.mp3" preload="auto" loop></audio>
   <audio id="screamSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_20c0d953c4.mp3" preload="auto"></audio>
-
   <script>
-    const parts = [
+    const parts=[
       `>> CONFESSION-LOG_0173 :: ACCESS GRANTED\n>> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED\n\n>> Parsing soul fragment...`,
       `\n>> [IN LUMEN VERITAS]\n>> ...`,
       `\n>> ██ Data stream unstable ██\n\n>> Salvation Attempt: FAILED`,
       ``,
-      `>> <span class="quote">SUBJECT 0173: “I prayed. No one answered.”</span>\n>> <span class="quote">SUBJECT 0173: “I heard laughter in the static.”</span>`,
+      `>> SUBJECT 0173: “I prayed. No one answered.”\n>> SUBJECT 0173: “I heard laughter in the static.”`,
       `\n>> Faith checksum: NULL`
     ];
-    const finalMsg = `\n> SYSTEM RESPONSE:\n     ░░░ WE SEE YOU ░░░`;
-
-    const textEl = document.getElementById('text');
-    const secondEl = document.getElementById('second-text');
-    const gifContainer = document.querySelector('.gif-container');
-    const screamer = document.getElementById('screamer');
-    const overlay = document.querySelector('.overlay');
-
-    const typeSound = document.getElementById('typeSound');
-    const ambience = document.getElementById('ambience');
-    const screamSound = document.getElementById('screamSound');
-
-    let clickStarted = false;
-    document.body.addEventListener('click', () => {
-      if (!clickStarted) {
-        clickStarted = true;
-        ambience.volume = 0.3;
-        ambience.play();
-        runSequence();
-      }
-    });
-
-    async function typePart(text, element, speed=100) {
-      let i = 0;
-      while (i < text.length) {
-        if (text.substring(i, i+3) === '...') {
-          for (let j=0; j<3; j++) {
-            element.innerHTML += '.';
-            await sleep(400);
-            element.innerHTML = element.innerHTML.slice(0,-1);
-            await sleep(200);
-          }
-          i +=3;
-        } else {
-          element.innerHTML += text[i];
-          if (text[i] !== ' ' && text[i] !== '\n') {
-            typeSound.currentTime = 0;
-            typeSound.play();
-          }
+    const finalMsg=`\n> SYSTEM RESPONSE:\n     ░░░ WE SEE YOU ░░░`;
+    const textEl=document.getElementById('text');
+    const secondEl=document.getElementById('second-text');
+    const gifC=document.querySelector('.gif-container');
+    const screamer=document.getElementById('screamer');
+    const overlay=document.querySelector('.overlay');
+    const startBtn=document.getElementById('start-btn');
+    const typeSound=document.getElementById('typeSound');
+    const ambience=document.getElementById('ambience');
+    const screamSound=document.getElementById('screamSound');
+    function sleep(ms){return new Promise(r=>setTimeout(r,ms));}
+    async function typePart(content,el,speed=80){
+      for(let i=0;i<content.length;){
+        if(content.substr(i,3)==='...'){
+          for(let j=0;j<3;j++){ el.innerHTML+='.'; await sleep(500); el.innerHTML=el.innerHTML.slice(0,-1); await sleep(200);} i+=3;
+        } else{
+          el.innerHTML+=content[i];
+          if(content[i]!==' '&&content[i]!=='\n'){typeSound.currentTime=0;typeSound.play();}
           i++; await sleep(speed);
         }
       }
     }
-    
-    function sleep(ms) { return new Promise(res => setTimeout(res, ms)); }
-
-    async function runSequence() {
-      for (let i=0; i<3; i++) {
-        await typePart(parts[i], textEl, 80);
-      }
-      await sleep(1500);
-      textEl.innerHTML = '';
-
-      gifContainer.style.display = 'block';
-      for (let i=3; i<parts.length; i++) {
-        await typePart(parts[i], secondEl, 90);
-      }
-      await sleep(2000);
-      secondEl.innerHTML = '';
-      gifContainer.style.display = 'none';
-      ambience.pause();
-      overlay.remove();
-
-      await sleep(500);
-      screamer.style.display = 'block';
-      screamSound.play();
+    async function run(){
+      startBtn.style.display='none';
+      ambience.volume=0.3; ambience.play();
+      // first three parts
+      for(let i=0;i<3;i++){ await typePart(parts[i],textEl);} await sleep(1500);
+      textEl.innerHTML=''; gifC.style.display='block'; await sleep(500);
+      // next parts
+      for(let i=3;i<parts.length;i++){ await typePart(parts[i],secondEl);} await sleep(2000);
+      secondEl.innerHTML=''; gifC.style.display='none'; ambience.pause(); await sleep(500);
+      overlay.remove(); screamer.style.display='block'; screamSound.play();
       consoleGlitch();
     }
-
-    function consoleGlitch() {
-      const errors = [
-        'FATAL: daemon.soul crashed!',
-        'NULLPOINTER at confession.log:173',
-        'Error: invocation of Abaddon failed',
-        '§§ UnholyInvocation §§',
-        'stack overflow: abyss.spawn()'
-      ];
-      let idx = 0;
-      const intv = setInterval(() => {
-        if (idx>=errors.length) clearInterval(intv);
-        else console.error(errors[idx++]);
-      }, 500);
-    }
+    function consoleGlitch(){ const errs=['FATAL: daemon.soul crashed!','NULLPTR in confession.log','SIGIL BREACH','PRAYER.EXE error','>>> ABADDON']); let k=0; let iv=setInterval(()=>{if(k>=errs.length)clearInterval(iv);else console.error(errs[k++]);},500); }
+    startBtn.addEventListener('click',run);
   </script>
 </body>
 </html>
