--- a/index.html
+++ b/index.html
@@ -1,90 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Confession Log XVII</title>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <style>
-    body {margin:0; background:#000; color:#00ffcc; font-family:'VT323',monospace; display:flex; align-items:center; justify-content:center; height:100vh; overflow:hidden;}
-    #container {max-width:80ch; background:rgba(0,0,0,0.7); border:2px solid #00ffcc; padding:2em; text-align:left; position:relative;}
-    #text,#second-text{white-space:pre-wrap; font-size:1.4em; min-height:4em;}
-    .screamer{font-size:4em; color:red; text-shadow:0 0 10px red; animation:glitchFlicker .15s infinite alternate; display:none; text-align:center;}
-    @keyframes glitchFlicker{0%{transform:translate(0)}50%{transform:translate(-2px,2px)}100%{transform:translate(2px,-2px)}}
-    .gif-container{display:none; text-align:center; margin:1em 0;}
-    img{width:320px; image-rendering:pixelated;}
-    .overlay{position:absolute; top:0;left:0; width:100%;height:100%; background:rgba(255,0,0,0.02); mix-blend-mode:overlay; animation:overlayFlicker .2s infinite; pointer-events:none;}
-    @keyframes overlayFlicker{0%,100%{opacity:0}50%{opacity:.1}}
-    button#start-btn{font-family:'VT323',monospace; background:#000;border:2px solid #00ffcc;color:#00ffcc; padding:.5em 1em;margin-top:1em;cursor:pointer; display:block; margin:1em auto 0;}
+    body {
+      margin: 0;
+      background-color: black;
+      color: #00ffcc;
+      font-family: 'VT323', monospace;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      overflow: hidden;
+    }
+
+    #container {
+      max-width: 800px;
+      padding: 2em;
+      border: 1px solid #00ffcc;
+      box-shadow: 0 0 10px #00ffcc33;
+    }
+
+    #output {
+      white-space: pre-wrap;
+      word-break: break-word;
+      font-size: 1.4em;
+    }
+
+    .quote {
+      color: fuchsia;
+    }
+
+    .glitch {
+      color: #ff00ff;
+      font-size: 2em;
+      text-shadow: 0 0 5px #ff00ff, 0 0 10px #00ffff, 0 0 20px #0000ff;
+      animation: glitch 0.3s infinite;
+    }
+
+    @keyframes glitch {
+      0% {
+        transform: translate(0);
+      }
+      20% {
+        transform: translate(-2px, 2px);
+      }
+      40% {
+        transform: translate(2px, -2px);
+      }
+      60% {
+        transform: translate(-1px, 1px);
+      }
+      80% {
+        transform: translate(1px, -1px);
+      }
+      100% {
+        transform: translate(0);
+      }
+    }
+
+    #screamer {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: black;
+      color: red;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 4em;
+      text-shadow: 0 0 10px red, 0 0 20px white;
+      animation: glitch 0.2s infinite;
+      z-index: 1000;
+      display: none;
+    }
+
+    #startBtn {
+      color: #00ffcc;
+      background: none;
+      border: 1px solid #00ffcc;
+      padding: 0.5em 1em;
+      font-size: 1.2em;
+      cursor: pointer;
+      font-family: 'VT323', monospace;
+    }
   </style>
 </head>
 <body>
   <div id="container">
-    <div id="text"></div>
-    <div class="gif-container"><img id="gif" src="giphy.gif" alt="Glitch gif"></div>
-    <div id="second-text"></div>
-    <div id="screamer">░░░ WE SEE YOU ░░░</div>
-    <div class="overlay"></div>
-    <button id="start-btn">Click to start</button>
+    <img id="glitchGif" src="giphy.gif" alt="Glitch gif" style="width: 320px; height: auto; image-rendering: pixelated; display: none;">
+    <div id="output"></div>
+    <button id="startBtn">Click to start</button>
   </div>
-  <audio id="typeSound" src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Typewriter_key.ogg" preload="auto"></audio>
-  <audio id="ambience" src="https://cdn.pixabay.com/download/audio/2023/03/13/audio_78016e640e.mp3?filename=data-murmur-140612.mp3" preload="auto" loop></audio>
-  <audio id="screamSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_20c0d953c4.mp3" preload="auto"></audio>
+  <div id="screamer">░░░ WE SEE YOU ░░░</div>
+
+  <audio id="typeSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_43a42d3406.mp3?filename=keyboard-typing-199731.mp3"></audio>
+  <audio id="ambientSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_38699640e7.mp3?filename=dark-ambient-110174.mp3" loop></audio>
+  <audio id="screamSound" src="https://cdn.pixabay.com/download/audio/2022/03/01/audio_0a1e54d6a1.mp3?filename=screaming-178844.mp3"></audio>
+
   <script>
-    const parts=[
-      '>> CONFESSION-LOG_0173 :: ACCESS GRANTED\n>> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED\n\n>> Parsing soul fragment...',
-      '\n>> [IN LUMEN VERITAS]\n>> ...',
-      '\n>> ██ Data stream unstable ██\n\n>> Salvation Attempt: FAILED',
-      '',
-      '>> SUBJECT 0173: “I prayed. No one answered.”\n>> SUBJECT 0173: “I heard laughter in the static.”',
-      '\n>> Faith checksum: NULL'
+    const output = document.getElementById('output');
+    const typeSound = document.getElementById('typeSound');
+    const ambientSound = document.getElementById('ambientSound');
+    const screamSound = document.getElementById('screamSound');
+    const gif = document.getElementById('glitchGif');
+    const screamer = document.getElementById('screamer');
+    const startBtn = document.getElementById('startBtn');
+
+    const textParts = [
+      `>> CONFESSION-LOG_0173 :: ACCESS GRANTED\n>> SYSTEM MESSAGE: ERROR_173: CONFESSION CORRUPTED\n\n>> Parsing soul fragment...\n\n>> [IN LUMEN VERITAS]\n. . .\n\n██ Data stream unstable ██\n\nSalvation Attempt: FAILED\n`,
+      `>> SUBJECT 0173: “<span class='quote'>I prayed. No one answered.</span>”\n>> SUBJECT 0173: “<span class='quote'>I heard laughter in the static.</span>”\n\n>> Faith checksum: NULL\n`,
+      `>> > SYSTEM RESPONSE:\n░░░ WE SEE YOU ░░░`
     ];
-    const finalMsg='\n> SYSTEM RESPONSE:\n     ░░░ WE SEE YOU ░░░';
 
-    const textEl=document.getElementById('text');
-    const secondEl=document.getElementById('second-text');
-    const gifC=document.querySelector('.gif-container');
-    const screamer=document.getElementById('screamer');
-    const overlay=document.querySelector('.overlay');
-    const startBtn=document.getElementById('start-btn');
-    const typeSound=document.getElementById('typeSound');
-    const ambience=document.getElementById('ambience');
-    const screamSound=document.getElementById('screamSound');
+    let part = 0;
+    let charIndex = 0;
 
-    function sleep(ms){return new Promise(r=>setTimeout(r,ms));}
-    async function typePart(content, el, speed=80){
-      let i=0;
-      while(i<content.length){
-        if(content.substr(i,3)==='...'){
-          for(let j=0;j<3;j++){ el.innerHTML+='.'; await sleep(500); el.innerHTML=el.innerHTML.slice(0,-1); await sleep(200);} i+=3;
+    async function typeText() {
+      if (part >= textParts.length) return;
+      let current = textParts[part];
+      charIndex = 0;
+      output.innerHTML = '';
+
+      while (charIndex < current.length) {
+        let char = current[charIndex];
+        output.innerHTML += char;
+
+        if (char !== ' ' && char !== '\n') typeSound.play().catch(() => {});
+
+        if (char === '.' && current.slice(charIndex, charIndex + 3) === '...') {
+          await new Promise(r => setTimeout(r, 400));
+          output.innerHTML = output.innerHTML.slice(0, -3);
+          await new Promise(r => setTimeout(r, 300));
+          output.innerHTML += '...';
+          await new Promise(r => setTimeout(r, 300));
+          output.innerHTML = output.innerHTML.slice(0, -3);
+          await new Promise(r => setTimeout(r, 300));
+          output.innerHTML += '...';
+          charIndex += 3;
         } else {
-          el.innerHTML+=content[i];
-          if(content[i]!==' '&&content[i]!=='\n'){typeSound.currentTime=0; typeSound.play();}
-          i++; await sleep(speed);
+          await new Promise(r => setTimeout(r, 45));
+          charIndex++;
         }
+      }
+
+      if (part === 0) {
+        await new Promise(r => setTimeout(r, 1200));
+        output.innerHTML = '';
+        gif.style.display = 'block';
+        part++;
+        await typeText();
+      } else if (part === 1) {
+        await new Promise(r => setTimeout(r, 1600));
+        output.innerHTML = '';
+        gif.style.display = 'none';
+        part++;
+        await typeText();
+      } else if (part === 2) {
+        await new Promise(r => setTimeout(r, 2000));
+        ambientSound.pause();
+        output.innerHTML = '';
+        screamer.style.display = 'flex';
+        screamSound.play();
       }
     }
 
-    async function run(){
-      startBtn.style.display='none';
-      ambience.volume=0.3; ambience.play().catch(()=>{});
-      for(let i=0;i<3;i++){ await typePart(parts[i], textEl); }
-      await sleep(1500);
-      textEl.innerHTML=''; gifC.style.display='block'; await sleep(500);
-      for(let i=3;i<parts.length;i++){ await typePart(parts[i], secondEl); }
-      await sleep(2000);
-      secondEl.innerHTML=''; gifC.style.display='none'; ambience.pause();
-      overlay.remove(); await sleep(500);
-      screamer.style.display='block'; screamSound.play().catch(()=>{});
-      consoleGlitch();
-    }
-
-    function consoleGlitch(){
-      const errs=['FATAL: daemon.soul crashed!','NULLPTR in confession.log','SIGIL BREACH','PRAYER.EXE error','>>> ABADDON'];
-      let idx=0; const iv=setInterval(()=>{ if(idx>=errs.length) clearInterval(iv); else console.error(errs[idx++]); },500);
-    }
-
-    startBtn.addEventListener('click',run);
+    startBtn.addEventListener('click', () => {
+      startBtn.style.display = 'none';
+      ambientSound.volume = 0.3;
+      ambientSound.play().catch(() => {});
+      typeText();
+    });
   </script>
 </body>
 </html>
